# pytest-better-timeout

./: README.md  pyproject.toml
pytest_better_timeout/: __init__.py  timeout_helper.py
scratch/: fantastic_decorators.py
tests/: test_more_stuff.py  test_timeout.py
