[tool.poetry]
name = "pytest-better-timeout"
version = "0.1.0"
description = ""
authors = ["Matthew Billman <mgbvox@gmail.com>", "Isaac Spiegel <isaaclspiegel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
pytest = "7.1.3"


[tool.poetry.group.dev.dependencies]
black = "<=19"
mypy = "<1.5"
ruff = "^0.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
